application/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: enterprise-flask
  labels:
    app: enterprise-flask

spec:
  replicas: 2
  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: enterprise-flask

  template:
    metadata:
      labels:
        app: enterprise-flask
        azure.workload.identity/use: "true"

    spec:
      serviceAccountName: enterprise-flask-sa

      containers:
        - name: enterprise-flask
          image: prodaksacrdeb2026.azurecr.io/enterprise-flask:IMAGE_TAG
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true

          startupProbe:
            httpGet:
              path: /health
              port: 5000
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 15

      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-kv


              https://prod-24.centralindia.logic.azure.com:443/workflows/e844b7a5643b4059a610c8294d7f528f/triggers/When_an_HTTP_request_is_received/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2FWhen_an_HTTP_request_is_received%2Frun&sv=1.0&sig=r9TNPTa84jxi9C94STUaPeADiZCvS12Q2aR_qzLjmhA
