application/k8s/service.yaml
apiVersion: v1

kind: Service

metadata:

  name: enterprise-flask

spec:

  selector:

    app: enterprise-flask

  ports:

  - port: 80

    targetPort: 5000

  type: ClusterIP
